bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:4: error: '=>' expected but '=' found.
    case (i,j) if i =j => return 4*i
                    ^